...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_add_black_24dp" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/btn_help"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_help_black_24dp" />

...
